--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.7",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
+    "redis": "^2.8.0",
     "validator": "^11.1.0"
   },
   "devDependencies": {
