--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "env-cmd -f ./.env nodemon src/app.js"
+    "start": "npm src/app.js"
   },
   "author": "Albert Jin",
   "license": "ISC",
