--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "animemanagerserver",
+  "name": "anikeepserver",
   "version": "1.0.0",
-  "description": "Backend for animemanager",
+  "description": "Backend for anikeep",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
